# GLFW_SolarSystem

./: Camera.h  GroberUnfug.sln  Mesh.cpp  README.md  Shader.h  main.cpp  scene.cpp
CG/: CMakeLists.txt
CG/opengl-series.xcodeproj/: project.pbxproj
CG/res/models/planets/: Orbit2.mtl
CG/source/CGTutorial/resources/: StandardShading.fragmentshader
CG/source/CGTutorial/source/: CGTutorial.cpp  CGTutorialLö.cpp  MeinObj.temp_caseinsensitive_rename.cpp  Mesh.h  Obj3D.cpp  objloader.cpp  texture.cpp
CG/src/: Camera.cpp  Camera.h  Mesh.h  Model.cpp  Model.h  Model.hpp  Planet.cpp  Planet.h  Planet.hpp  Shader.cpp  Shader.h  Texture.h  main.cpp
CG/src/res/shaders/: lighting.vs  modelLoading.frag  modelLoading.vs  modelOrbit.frag
Debug/: GroberUnfug.ilk
GroberUnfug/: ClassDiagram.cd  GroberUnfug.vcxproj  GroberUnfug.vcxproj.filters  packages.config
GroberUnfug/Debug/: Camera.nativecodeanalysis.sarif  Mesh.nativecodeanalysis.sarif  Model.nativecodeanalysis.sarif  Model.nativecodeanalysis.xml  Shader.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc142.idb
GroberUnfug/Debug/GroberUnfug.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GroberUnfug.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GroberUnfug/x64/Debug/: main.obj.enc  vc142.idb
GroberUnfug/x64/Debug/GroberUnfug.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GroberUnfug.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Resources/: CGTutorial.cpp  CGTutorialLö.cpp  Obj3D.cpp  Obj3D.hpp  objects.cpp  shader.cpp
