cmake_minimum_required(VERSION 3.8)
project(CG)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        source/CGTutorial/source/CGTutorial.cpp
        source/CGTutorial/source/CGTutorialLö.cpp
        source/CGTutorial/source/objects.cpp
        source/CGTutorial/source/objects.hpp
        source/CGTutorial/source/objloader.cpp
        source/CGTutorial/source/objloader.hpp
        source/CGTutorial/source/shader.cpp
        source/CGTutorial/source/shader.hpp
        source/CGTutorial/source/texture.cpp
        source/CGTutorial/source/texture.hpp
        source/common/thirdparty/glew/include/GL/glew.h
        source/common/thirdparty/glew/include/GL/glxew.h
        source/common/thirdparty/glew/include/GL/wglew.h
        source/common/thirdparty/glew/src/glew.c
        source/common/thirdparty/glew/src/glewinfo.c
        source/common/thirdparty/glew/src/visualinfo.c
        source/common/thirdparty/glfw/include/GLFW/glfw3.h
        source/common/thirdparty/glfw/include/GLFW/glfw3native.h
        source/common/thirdparty/glm/glm/detail/_features.hpp
        source/common/thirdparty/glm/glm/detail/_fixes.hpp
        source/common/thirdparty/glm/glm/detail/_literals.hpp
        source/common/thirdparty/glm/glm/detail/_noise.hpp
        source/common/thirdparty/glm/glm/detail/_swizzle.hpp
        source/common/thirdparty/glm/glm/detail/_swizzle_func.hpp
        source/common/thirdparty/glm/glm/detail/_vectorize.hpp
        source/common/thirdparty/glm/glm/detail/dummy.cpp
        source/common/thirdparty/glm/glm/detail/func_common.hpp
        source/common/thirdparty/glm/glm/detail/func_exponential.hpp
        source/common/thirdparty/glm/glm/detail/func_geometric.hpp
        source/common/thirdparty/glm/glm/detail/func_integer.hpp
        source/common/thirdparty/glm/glm/detail/func_matrix.hpp
        source/common/thirdparty/glm/glm/detail/func_noise.hpp
        source/common/thirdparty/glm/glm/detail/func_packing.hpp
        source/common/thirdparty/glm/glm/detail/func_trigonometric.hpp
        source/common/thirdparty/glm/glm/detail/func_vector_relational.hpp
        source/common/thirdparty/glm/glm/detail/glm.cpp
        source/common/thirdparty/glm/glm/detail/hint.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_common.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_exponential.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_geometric.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_integer.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_matrix.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_trigonometric.hpp
        source/common/thirdparty/glm/glm/detail/intrinsic_vector_relational.hpp
        source/common/thirdparty/glm/glm/detail/precision.hpp
        source/common/thirdparty/glm/glm/detail/setup.hpp
        source/common/thirdparty/glm/glm/detail/type_float.hpp
        source/common/thirdparty/glm/glm/detail/type_gentype.hpp
        source/common/thirdparty/glm/glm/detail/type_half.hpp
        source/common/thirdparty/glm/glm/detail/type_int.hpp
        source/common/thirdparty/glm/glm/detail/type_mat.hpp
        source/common/thirdparty/glm/glm/detail/type_mat2x2.hpp
        source/common/thirdparty/glm/glm/detail/type_mat2x3.hpp
        source/common/thirdparty/glm/glm/detail/type_mat2x4.hpp
        source/common/thirdparty/glm/glm/detail/type_mat3x2.hpp
        source/common/thirdparty/glm/glm/detail/type_mat3x3.hpp
        source/common/thirdparty/glm/glm/detail/type_mat3x4.hpp
        source/common/thirdparty/glm/glm/detail/type_mat4x2.hpp
        source/common/thirdparty/glm/glm/detail/type_mat4x3.hpp
        source/common/thirdparty/glm/glm/detail/type_mat4x4.hpp
        source/common/thirdparty/glm/glm/detail/type_vec.hpp
        source/common/thirdparty/glm/glm/detail/type_vec1.hpp
        source/common/thirdparty/glm/glm/detail/type_vec2.hpp
        source/common/thirdparty/glm/glm/detail/type_vec3.hpp
        source/common/thirdparty/glm/glm/detail/type_vec4.hpp
        source/common/thirdparty/glm/glm/gtc/constants.hpp
        source/common/thirdparty/glm/glm/gtc/epsilon.hpp
        source/common/thirdparty/glm/glm/gtc/matrix_access.hpp
        source/common/thirdparty/glm/glm/gtc/matrix_integer.hpp
        source/common/thirdparty/glm/glm/gtc/matrix_inverse.hpp
        source/common/thirdparty/glm/glm/gtc/matrix_transform.hpp
        source/common/thirdparty/glm/glm/gtc/noise.hpp
        source/common/thirdparty/glm/glm/gtc/packing.hpp
        source/common/thirdparty/glm/glm/gtc/quaternion.hpp
        source/common/thirdparty/glm/glm/gtc/random.hpp
        source/common/thirdparty/glm/glm/gtc/reciprocal.hpp
        source/common/thirdparty/glm/glm/gtc/type_precision.hpp
        source/common/thirdparty/glm/glm/gtc/type_ptr.hpp
        source/common/thirdparty/glm/glm/gtc/ulp.hpp
        source/common/thirdparty/glm/glm/gtx/associated_min_max.hpp
        source/common/thirdparty/glm/glm/gtx/bit.hpp
        source/common/thirdparty/glm/glm/gtx/closest_point.hpp
        source/common/thirdparty/glm/glm/gtx/color_space.hpp
        source/common/thirdparty/glm/glm/gtx/color_space_YCoCg.hpp
        source/common/thirdparty/glm/glm/gtx/compatibility.hpp
        source/common/thirdparty/glm/glm/gtx/component_wise.hpp
        source/common/thirdparty/glm/glm/gtx/constants.hpp
        source/common/thirdparty/glm/glm/gtx/dual_quaternion.hpp
        source/common/thirdparty/glm/glm/gtx/epsilon.hpp
        source/common/thirdparty/glm/glm/gtx/euler_angles.hpp
        source/common/thirdparty/glm/glm/gtx/extend.hpp
        source/common/thirdparty/glm/glm/gtx/extented_min_max.hpp
        source/common/thirdparty/glm/glm/gtx/fast_exponential.hpp
        source/common/thirdparty/glm/glm/gtx/fast_square_root.hpp
        source/common/thirdparty/glm/glm/gtx/fast_trigonometry.hpp
        source/common/thirdparty/glm/glm/gtx/gradient_paint.hpp
        source/common/thirdparty/glm/glm/gtx/handed_coordinate_space.hpp
        source/common/thirdparty/glm/glm/gtx/inertia.hpp
        source/common/thirdparty/glm/glm/gtx/int_10_10_10_2.hpp
        source/common/thirdparty/glm/glm/gtx/integer.hpp
        source/common/thirdparty/glm/glm/gtx/intersect.hpp
        source/common/thirdparty/glm/glm/gtx/io.hpp
        source/common/thirdparty/glm/glm/gtx/log_base.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_cross_product.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_interpolation.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_major_storage.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_operation.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_query.hpp
        source/common/thirdparty/glm/glm/gtx/matrix_transform_2d.hpp
        source/common/thirdparty/glm/glm/gtx/mixed_product.hpp
        source/common/thirdparty/glm/glm/gtx/multiple.hpp
        source/common/thirdparty/glm/glm/gtx/noise.hpp
        source/common/thirdparty/glm/glm/gtx/norm.hpp
        source/common/thirdparty/glm/glm/gtx/normal.hpp
        source/common/thirdparty/glm/glm/gtx/normalize_dot.hpp
        source/common/thirdparty/glm/glm/gtx/number_precision.hpp
        source/common/thirdparty/glm/glm/gtx/optimum_pow.hpp
        source/common/thirdparty/glm/glm/gtx/orthonormalize.hpp
        source/common/thirdparty/glm/glm/gtx/perpendicular.hpp
        source/common/thirdparty/glm/glm/gtx/polar_coordinates.hpp
        source/common/thirdparty/glm/glm/gtx/projection.hpp
        source/common/thirdparty/glm/glm/gtx/quaternion.hpp
        source/common/thirdparty/glm/glm/gtx/random.hpp
        source/common/thirdparty/glm/glm/gtx/raw_data.hpp
        source/common/thirdparty/glm/glm/gtx/reciprocal.hpp
        source/common/thirdparty/glm/glm/gtx/rotate_normalized_axis.hpp
        source/common/thirdparty/glm/glm/gtx/rotate_vector.hpp
        source/common/thirdparty/glm/glm/gtx/scalar_relational.hpp
        source/common/thirdparty/glm/glm/gtx/simd_mat4.hpp
        source/common/thirdparty/glm/glm/gtx/simd_quat.hpp
        source/common/thirdparty/glm/glm/gtx/simd_vec4.hpp
        source/common/thirdparty/glm/glm/gtx/spline.hpp
        source/common/thirdparty/glm/glm/gtx/std_based_type.hpp
        source/common/thirdparty/glm/glm/gtx/string_cast.hpp
        source/common/thirdparty/glm/glm/gtx/transform.hpp
        source/common/thirdparty/glm/glm/gtx/transform2.hpp
        source/common/thirdparty/glm/glm/gtx/ulp.hpp
        source/common/thirdparty/glm/glm/gtx/unsigned_int.hpp
        source/common/thirdparty/glm/glm/gtx/vec1.hpp
        source/common/thirdparty/glm/glm/gtx/vector_angle.hpp
        source/common/thirdparty/glm/glm/gtx/vector_query.hpp
        source/common/thirdparty/glm/glm/gtx/wrap.hpp
        source/common/thirdparty/glm/glm/common.hpp
        source/common/thirdparty/glm/glm/exponential.hpp
        source/common/thirdparty/glm/glm/ext.hpp
        source/common/thirdparty/glm/glm/fwd.hpp
        source/common/thirdparty/glm/glm/geometric.hpp
        source/common/thirdparty/glm/glm/glm.hpp
        source/common/thirdparty/glm/glm/integer.hpp
        source/common/thirdparty/glm/glm/mat2x2.hpp
        source/common/thirdparty/glm/glm/mat2x3.hpp
        source/common/thirdparty/glm/glm/mat2x4.hpp
        source/common/thirdparty/glm/glm/mat3x2.hpp
        source/common/thirdparty/glm/glm/mat3x3.hpp
        source/common/thirdparty/glm/glm/mat3x4.hpp
        source/common/thirdparty/glm/glm/mat4x2.hpp
        source/common/thirdparty/glm/glm/mat4x3.hpp
        source/common/thirdparty/glm/glm/mat4x4.hpp
        source/common/thirdparty/glm/glm/matrix.hpp
        source/common/thirdparty/glm/glm/packing.hpp
        source/common/thirdparty/glm/glm/trigonometric.hpp
        source/common/thirdparty/glm/glm/vec2.hpp
        source/common/thirdparty/glm/glm/vec3.hpp
        source/common/thirdparty/glm/glm/vec4.hpp
        source/common/thirdparty/glm/glm/vector_relational.hpp
        source/common/thirdparty/stb_image/stb_image.h
        source/common/platform.hpp)

add_executable(CG ${SOURCE_FILES})